--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.1.96",
+    "@types/papaparse": "^5.3.7",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "^4.5.13",
@@ -24,6 +25,7 @@
     "install": "^0.13.0",
     "js-beautify": "^1.14.7",
     "json5": "^2.2.3",
+    "papaparse": "^5.3.2",
     "vue": "^2.6.14",
     "vue-codemirror": "^4.0.6",
     "vue-property-decorator": "^8.5.1",
